<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowToPlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt0"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="viewStart"
            android:text="@string/How_to_play_1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img0"
            android:src="@drawable/htpmove"
            android:gravity="center"
            android:contentDescription="How_to_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt1"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="viewStart"
            android:text="@string/How_to_play_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img1"
            android:src="@drawable/htpjump0"
            android:gravity="center"
            android:contentDescription="How_to_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt2"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="viewStart"
            android:text="@string/How_to_play_3"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img2"
            android:src="@drawable/htpjump1"
            android:gravity="center"
            android:contentDescription="How_to_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt3"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="viewStart"
            android:text="@string/How_to_play_4"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img3"
            android:src="@drawable/htpjump2"
            android:gravity="center"
            android:contentDescription="How_to_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt4"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="viewStart"
            android:text="@string/How_to_play_5" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>